# Scrivi

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  test-scrivi.bat
.airframe/: airframe-workspace.json
Scrivi.xcodeproj/: project.pbxproj
Scrivi.xcworkspace/: contents.xcworkspacedata
ScriviCore/: CMakeLists.txt  README.md
ScriviCore.xcodeproj/: project.pbxproj
ScriviCore/include/scrivi/: AssetTypes.hpp  CommentTypes.hpp  Error.hpp  IDs.hpp  ObjectTypes.hpp  RepairIssue.hpp  Requests.hpp  Result.hpp  Results.hpp  ScriviCore.hpp  Services.hpp  Types.hpp  module.modulemap  scrivi.h
ScriviCore/src/assets/: AssetStore.cpp  AssetStore.hpp
ScriviCore/src/comments/: CommentStore.cpp  CommentStore.hpp
ScriviCore/src/domain/: IDs.cpp  Slug.cpp  TextStats.cpp  TextStats.hpp
ScriviCore/src/git/: SnapshotService.cpp  SnapshotService.hpp  SystemGitProvider.cpp  SystemGitProvider.hpp
ScriviCore/src/history/: HistoryService.cpp  HistoryService.hpp  HistoryStore.cpp  HistoryStore.hpp
ScriviCore/src/identity/: IdentityService.cpp  IdentityService.hpp
ScriviCore/src/inbox/: InboxStore.cpp  InboxStore.hpp
ScriviCore/src/manuscript/: ChapterCreator.cpp  ChapterCreator.hpp  ChapterDeleter.cpp  ChapterDeleter.hpp  ChapterIndex.cpp  ChapterIndex.hpp  ChapterMerger.cpp  ChapterMerger.hpp  ChapterRenamer.cpp  ChapterRenamer.hpp  ChapterReorderer.cpp  ChapterReorderer.hpp  ManuscriptOrderResolver.cpp  ManuscriptOrderResolver.hpp  SceneCreator.cpp  SceneCreator.hpp  SceneDeleter.cpp  SceneDeleter.hpp  SceneIndex.cpp  SceneIndex.hpp  SceneMerger.cpp  SceneMerger.hpp  SceneReader.cpp  SceneReader.hpp  SceneRenamer.cpp  SceneRenamer.hpp  SceneReorderer.cpp  SceneReorderer.hpp  SceneWriter.cpp  SceneWriter.hpp
ScriviCore/src/objects/: ObjectStore.cpp  ObjectStore.hpp
ScriviCore/src/platform/: AppSupportLayout.cpp  AppSupportLayout.hpp  EncryptedFileSecureStore.cpp  EncryptedFileSecureStore.hpp  LocalFileSystem.cpp  LocalFileSystem.hpp  SystemUUIDProvider.cpp  SystemUUIDProvider.hpp
ScriviCore/src/project_package/: ProjectCreator.cpp  ProjectCreator.hpp  ProjectOpener.cpp  ProjectOpener.hpp  ProjectValidator.cpp  ProjectValidator.hpp
ScriviCore/src/public_api/: ScriviCore.cpp  scrivi_c_api.cpp
ScriviCore/src/repair/: ExternalChangeScanner.cpp  ExternalChangeScanner.hpp  RepairClassifier.cpp  RepairClassifier.hpp  RepairDispatcher.cpp  RepairDispatcher.hpp  RepairHandlers.cpp  RepairHandlers.hpp
ScriviCore/src/schemas/: AssetMetaJson.cpp  AssetMetaJson.hpp  ChapterMetaJson.cpp  ChapterMetaJson.hpp  CommentJson.cpp  CommentJson.hpp  ExternalTimelineJson.cpp  ExternalTimelineJson.hpp  HistoricalEventJson.cpp  HistoricalEventJson.hpp  ManuscriptMetaJson.cpp  ObjectJson.cpp  ObjectJson.hpp  ProjectJson.cpp  ProjectJson.hpp  ProjectMembersJson.cpp  ProjectPersonasJson.cpp  RepairIssueJson.cpp  RepairIssueJson.hpp  SceneMetaJson.cpp  SceneMetaJson.hpp  SchemaUtils.hpp  SnapshotMetadataJson.cpp  SnapshotMetadataJson.hpp  StoryStructureJson.cpp  StoryStructureJson.hpp  TimelineMetaJson.cpp  TimelineMetaJson.hpp  WorkspaceStateJson.cpp  WorkspaceStateJson.hpp
ScriviCore/src/util/: AppSupportLayout.cpp  AppSupportLayout.hpp  AtomicWrite.cpp  AtomicWrite.hpp  Hash.cpp  Hash.hpp  Json.cpp  Json.hpp  MarkdownStrip.cpp  MarkdownStrip.hpp  OrderKey.cpp  OrderKey.hpp  PathUtils.cpp  PathUtils.hpp  Process.cpp  Process.hpp  Slug.cpp  TextStats.cpp
ScriviCore/src/workspace/: WorkspaceStateService.cpp  WorkspaceStateService.hpp
ScriviCore/tests/: CMakeLists.txt
ScriviCore/tests/integration/: AppSupportLayoutTests.cpp  ApplyRepairTests.cpp  AssetTests.cpp  ChapterMigrationTests.cpp  ChapterSlugCollisionTests.cpp  CommentTests.cpp  CreateProjectTests.cpp  CreateSceneTests.cpp  DeleteSceneTests.cpp  EncryptedSecureStoreTests.cpp  ExternalChangeTests.cpp  GitSnapshotTests.cpp  HistoryCApiTests.cpp  IdentityTests.cpp  InboxTests.cpp  MergeSceneTests.cpp  MultiSceneTests.cpp  MvpLoopTests.cpp  ObjectCrudTests.cpp  OpenProjectTests.cpp  RenameSceneTests.cpp  ReorderTests.cpp  SaveSceneTests.cpp  SceneIdentityTests.cpp  SceneSplitRepro.cpp  SearchableContentTests.cpp  TimelineTests.cpp
ScriviCore/tests/mocks/: DeterministicUUIDProvider.hpp  FixedClock.hpp  MockGitProvider.hpp  MockSecureStore.hpp
ScriviCore/tests/unit/: ChapterIndexTests.cpp  HistoryServiceTests.cpp  IDTests.cpp  JsonSchemaTests.cpp  LocalFileSystemTests.cpp  MarkdownStripTests.cpp  MockServicesTests.cpp  OrderKeyTests.cpp  PathUtilsTests.cpp  ResultTests.cpp  SchemaTests.cpp  SlugTests.cpp  TextStatsTests.cpp
ScriviSpotlightImporter/: ImportExtension.swift  Info.plist
docs/: README.md  Scrivi_Apple_Wrapper_Design_v0_1.md  Scrivi_Architecture_v0_3.md  Scrivi_Backend_Architecture_v0_2.md  Scrivi_Backend_Behavior_Spec_v0_1.md  Scrivi_Backend_Behavior_Spec_v0_2.md  Scrivi_Backend_MVP_Slice_v0_1.md  Scrivi_Backend_Runtime_Trade_Study_v0_2.md  Scrivi_Chapter_Folder_and_Identity_Trade_Study_v0_1.md  Scrivi_Cpp24_Backend_Core_Plan_v0_1.md  Scrivi_Cpp24_Core_API_Sketch_v0_2.md  Scrivi_Cpp24_Core_API_Sketch_v0_3.md  Scrivi_Cpp24_Core_Repository_Skeleton_v0_1.md  Scrivi_Cpp24_Core_Repository_Skeleton_v0_2.md  Scrivi_DevOps_and_Build_Environment_Plan_v0_1.md  Scrivi_External_Change_Repair_Matrix_v0_1.md  Scrivi_External_Change_Repair_Matrix_v0_2.md  Scrivi_Minimum_Schema_Set_v0_1.md  Scrivi_PerWindow_Project_Model_Design_v0_1.md  Scrivi_Project_Creation_and_Open_Flow_v0_1.md  Scrivi_Project_Creation_and_Open_Flow_v0_2.md  Scrivi_Project_Package_Structure_v0_1.md  Scrivi_SP055_Branching_Architecture_Pass_v0_1.md  Scrivi_SecureStore_Platform_Trade_Study_v0_1.md  Scrivi_Spotlight_Integration_Design_v0_1.md  Scrivi_Swift_Interop_Trade_Study_v0_1.md  Scrivi_Timeline_Panel_Design_v0_1.md  Scrivi_Timeline_Panel_Design_v0_3.md  Scrivi_UndoRedo_History_and_Copy_Buffers_Design_v0_1.md  Scrivi_WritingSurface_Behavior_Spec_v0_1.md
memory/: feedback_xcode_pbxproj.md
platform/: LocalFileSystem.hpp  NullLogger.hpp
public_api/: ScriviCore.cpp
schemas/: ChapterMetaJson.hpp  ManuscriptMetaJson.cpp  ManuscriptMetaJson.hpp  (+5 more)
(+382 files in other folders)
